# needle-skill

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
needle_skill/: SKILL.md  __main__.py  cli.py  config.py  engine.py  server.py
needle_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
